src/components/Todo.module.css
.list {
  margin-bottom: 0.5rem;
}

.taskInfo {
  display: grid;
  grid-template-columns: auto 1fr;
  column-gap: 0.5rem;
  align-items: center;
}

.taskContent {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 0.5rem;
  word-break: break-word;
}

.completed {
  text-decoration: line-through;
}

.delete {
  background-color: #e74c3c;
}

.form {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 0.5rem;
  margin-bottom: 0.5rem;
}

